{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 24,
  "lineage": "d219efb9-0965-d60a-0094-e1af9b4bd218",
  "resources": [
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ef2398e937d4478",
            "arn": "arn:aws:ec2:us-east-1:088310115913:elastic-ip/eipalloc-07ef2398e937d4478",
            "domain": "vpc",
            "id": "eipalloc-07ef2398e937d4478",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-60-48.compute-1.amazonaws.com",
            "public_ip": "54.84.60.48",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:internet-gateway/igw-006aa3c65a4a8221d",
            "id": "igw-006aa3c65a4a8221d",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-igw"
            },
            "tags_all": {
              "Name": "ak-igw"
            },
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ef2398e937d4478",
            "association_id": "eipassoc-059f3b7bce16e5153",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03e8f03e812bc37f9",
            "network_interface_id": "eni-02d0c4dc88217a0ee",
            "private_ip": "10.0.1.166",
            "public_ip": "54.84.60.48",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4f5a1ccf47212ce",
            "tags": {
              "Name": "ak-nat-gw"
            },
            "tags_all": {
              "Name": "ak-nat-gw"
            },
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "dependencies": [
            "module.ak_vpc.aws_eip.nat_eip",
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_subnet.pub_subnet",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:route-table/rtb-034df69c9a1265839",
            "id": "rtb-034df69c9a1265839",
            "owner_id": "088310115913",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e8f03e812bc37f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ak-private-rt"
            },
            "tags_all": {
              "Name": "ak-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ak_vpc.aws_eip.nat_eip",
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_nat_gateway.nat_gw",
            "module.ak_vpc.aws_subnet.pub_subnet",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:route-table/rtb-00836337237270097",
            "id": "rtb-00836337237270097",
            "owner_id": "088310115913",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006aa3c65a4a8221d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ak-public-rt"
            },
            "tags_all": {
              "Name": "ak-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df4b54a4aa669b68",
            "region": "us-east-1",
            "route_table_id": "rtb-034df69c9a1265839",
            "subnet_id": "subnet-06635198e8d17ad5c"
          },
          "dependencies": [
            "module.ak_vpc.aws_eip.nat_eip",
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_nat_gateway.nat_gw",
            "module.ak_vpc.aws_route_table.pri_rt",
            "module.ak_vpc.aws_subnet.pri_subnet",
            "module.ak_vpc.aws_subnet.pub_subnet",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002040b7013127b42",
            "region": "us-east-1",
            "route_table_id": "rtb-034df69c9a1265839",
            "subnet_id": "subnet-0fed302c3700f0a85"
          },
          "dependencies": [
            "module.ak_vpc.aws_eip.nat_eip",
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_nat_gateway.nat_gw",
            "module.ak_vpc.aws_route_table.pri_rt",
            "module.ak_vpc.aws_subnet.pri_subnet",
            "module.ak_vpc.aws_subnet.pub_subnet",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049c7c19678bcbd65",
            "region": "us-east-1",
            "route_table_id": "rtb-00836337237270097",
            "subnet_id": "subnet-0f4f5a1ccf47212ce"
          },
          "dependencies": [
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_route_table.pub_rt",
            "module.ak_vpc.aws_subnet.pub_subnet",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db21a0ca4dfb9cf7",
            "region": "us-east-1",
            "route_table_id": "rtb-00836337237270097",
            "subnet_id": "subnet-0690837e4590312f3"
          },
          "dependencies": [
            "module.ak_vpc.aws_internet_gateway.igw",
            "module.ak_vpc.aws_route_table.pub_rt",
            "module.ak_vpc.aws_subnet.pub_subnet",
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-06635198e8d17ad5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06635198e8d17ad5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pri-subnet-1"
            },
            "tags_all": {
              "Name": "ak-pri-subnet-1"
            },
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-0fed302c3700f0a85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fed302c3700f0a85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pri-subnet-2"
            },
            "tags_all": {
              "Name": "ak-pri-subnet-2"
            },
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-0f4f5a1ccf47212ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f5a1ccf47212ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pub-subnet-1"
            },
            "tags_all": {
              "Name": "ak-pub-subnet-1"
            },
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-0690837e4590312f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0690837e4590312f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pub-subnet-2"
            },
            "tags_all": {
              "Name": "ak-pub-subnet-2"
            },
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ak_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ak_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:vpc/vpc-096bbc3303533a7ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d232e449a88f92e1",
            "default_route_table_id": "rtb-0409eacdc2832f527",
            "default_security_group_id": "sg-0c2e5580e89e1de3e",
            "dhcp_options_id": "dopt-0cea2df4c794124ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096bbc3303533a7ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0409eacdc2832f527",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "ak-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ak-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.pub_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:security-group/sg-07dd3e8be197e9897",
            "description": "Public Security Group",
            "egress": [],
            "id": "sg-07dd3e8be197e9897",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "203.0.113.25/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pub-sg",
            "name_prefix": "",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ak_pub_sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ak_pub_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-096bbc3303533a7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "203.0.113.25/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-974681889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07dd3e8be197e9897",
            "security_group_rule_id": "sgr-04b5ed6b51f2a22a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc",
            "module.pub_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-479791597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07dd3e8be197e9897",
            "security_group_rule_id": "sgr-0ba7113ca2b86e733",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc",
            "module.pub_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-875514734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07dd3e8be197e9897",
            "security_group_rule_id": "sgr-0ae63a8629f61680a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ak_vpc.aws_vpc.ak_vpc",
            "module.pub_sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}